--- a/myapp/package.json
+++ b/myapp/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "axios": "^0.21.1"
   },
   "devDependencies": {},
   "scripts": {
